@@ -7,7 +7,8 @@ Revision history for Dancer::Plugin::Cache::CHI
  - doc typo corrected (thanks Perlover!) [GH#7]
 
  [ENHANCEMENTS]
- - new 'create_cache_namespace' keyword
+ - cache namespaces support now provided. [GH#8]
+    Patch by Perlover.
 
 1.2.0 2011-10-15
  [BUG FIXES]
